--- a/notebook/basic.ipynb
+++ b/notebook/basic.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# install dependencies\n",
     "! pip install requests\n",
-    "! pip install ataskq==0.5.1"
+    "! pip install ataskq==0.6.3"
    ]
   },
   {
@@ -23,25 +23,21 @@
     "from ataskq.tasks_utils import hello_world, dummy_args_task\n",
     "\n",
     "# create  job\n",
-    "conn = 'http://ataskq-server:8080'\n",
-    "tr = TaskQ(conn=conn).create_job()\n",
+    "tr = TaskQ().create_job()\n",
     "\n",
     "# add tasks\n",
     "# entrypoint stands for the relevant function import statement\n",
     "# (here we use build in demo functions)\n",
     "tr.add_tasks(\n",
     "    [\n",
-    "        Task(entrypoint=hello_world),\n",
-    "        Task(entrypoint=dummy_args_task, targs=targs(\"arg0\", \"arg1\", kwarg1=10, kwarg2=\"this is kwarg2\")),\n",
+    "        Task(name=\"hello\", entrypoint=hello_world),\n",
+    "        Task(name=\"with_args\", entrypoint=dummy_args_task, targs=targs(\"arg0\", \"arg1\", kwarg1=10, kwarg2=\"this is kwarg2\")),\n",
     "    ]\n",
     ")\n",
     "\n",
     "tasks = tr.get_tasks()\n",
     "for t in tasks:\n",
-    "    print(t)\n",
-    "\n",
-    "# run the tasks\n",
-    "tr.run()  # to run in parallel add num_processes=N"
+    "    print(t)\n"
    ]
   },
   {
